seaqt/QtWebKitWidgets/gen_qwebview.h

typedef struct QAction QAction;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QIcon QIcon;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QNetworkRequest QNetworkRequest;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPrinter QPrinter;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWebHistory QWebHistory;
typedef struct QWebPage QWebPage;
typedef struct QWebSettings QWebSettings;
typedef struct QWebView QWebView;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QWebView* QWebView_new(QWidget* parent);
QWebView* QWebView_new2();
QMetaObject* QWebView_metaObject(const QWebView* self);
void* QWebView_metacast(QWebView* self, const char* param1);
struct miqt_string QWebView_tr(const char* s);
struct miqt_string QWebView_trUtf8(const char* s);
QWebPage* QWebView_page(const QWebView* self);
void QWebView_setPage(QWebView* self, QWebPage* page);
void QWebView_load(QWebView* self, QUrl* url);
void QWebView_loadWithRequest(QWebView* self, QNetworkRequest* request);
void QWebView_setHtml(QWebView* self, struct miqt_string html);
void QWebView_setContent(QWebView* self, struct miqt_string data);
QWebHistory* QWebView_history(const QWebView* self);
QWebSettings* QWebView_settings(const QWebView* self);
struct miqt_string QWebView_title(const QWebView* self);
void QWebView_setUrl(QWebView* self, QUrl* url);
QUrl* QWebView_url(const QWebView* self);
QIcon* QWebView_icon(const QWebView* self);
bool QWebView_hasSelection(const QWebView* self);
struct miqt_string QWebView_selectedText(const QWebView* self);
struct miqt_string QWebView_selectedHtml(const QWebView* self);
QAction* QWebView_pageAction(const QWebView* self, int action);
void QWebView_triggerPageAction(QWebView* self, int action);
bool QWebView_isModified(const QWebView* self);
QVariant* QWebView_inputMethodQuery(const QWebView* self, int property);
QSize* QWebView_sizeHint(const QWebView* self);
double QWebView_zoomFactor(const QWebView* self);
void QWebView_setZoomFactor(QWebView* self, double factor);
void QWebView_setTextSizeMultiplier(QWebView* self, double factor);
double QWebView_textSizeMultiplier(const QWebView* self);
int QWebView_renderHints(const QWebView* self);
void QWebView_setRenderHints(QWebView* self, int hints);
void QWebView_setRenderHint(QWebView* self, int hint);
bool QWebView_findText(QWebView* self, struct miqt_string subString);
bool QWebView_event(QWebView* self, QEvent* param1);
void QWebView_stop(QWebView* self);
void QWebView_back(QWebView* self);
void QWebView_forward(QWebView* self);
void QWebView_reload(QWebView* self);
void QWebView_print(const QWebView* self, QPrinter* param1);
void QWebView_loadStarted(QWebView* self);
void QWebView_connect_loadStarted(QWebView* self, intptr_t slot);
void QWebView_loadProgress(QWebView* self, int progress);
void QWebView_connect_loadProgress(QWebView* self, intptr_t slot);
void QWebView_loadFinished(QWebView* self, bool param1);
void QWebView_connect_loadFinished(QWebView* self, intptr_t slot);
void QWebView_titleChanged(QWebView* self, struct miqt_string title);
void QWebView_connect_titleChanged(QWebView* self, intptr_t slot);
void QWebView_statusBarMessage(QWebView* self, struct miqt_string text);
void QWebView_connect_statusBarMessage(QWebView* self, intptr_t slot);
void QWebView_linkClicked(QWebView* self, QUrl* param1);
void QWebView_connect_linkClicked(QWebView* self, intptr_t slot);
void QWebView_selectionChanged(QWebView* self);
void QWebView_connect_selectionChanged(QWebView* self, intptr_t slot);
void QWebView_iconChanged(QWebView* self);
void QWebView_connect_iconChanged(QWebView* self, intptr_t slot);
void QWebView_urlChanged(QWebView* self, QUrl* param1);
void QWebView_connect_urlChanged(QWebView* self, intptr_t slot);
struct miqt_string QWebView_tr2(const char* s, const char* c);
struct miqt_string QWebView_tr3(const char* s, const char* c, int n);
struct miqt_string QWebView_trUtf82(const char* s, const char* c);
struct miqt_string QWebView_trUtf83(const char* s, const char* c, int n);
void QWebView_load2(QWebView* self, QNetworkRequest* request, int operation);
void QWebView_load3(QWebView* self, QNetworkRequest* request, int operation, struct miqt_string body);
void QWebView_setHtml2(QWebView* self, struct miqt_string html, QUrl* baseUrl);
void QWebView_setContent2(QWebView* self, struct miqt_string data, struct miqt_string mimeType);
void QWebView_setContent3(QWebView* self, struct miqt_string data, struct miqt_string mimeType, QUrl* baseUrl);
void QWebView_triggerPageAction2(QWebView* self, int action, bool checked);
void QWebView_setRenderHint2(QWebView* self, int hint, bool enabled);
bool QWebView_findText2(QWebView* self, struct miqt_string subString, int options);
bool QWebView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QWebView_virtualbase_inputMethodQuery(const void* self, int property);
bool QWebView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QWebView_virtualbase_sizeHint(const void* self);
bool QWebView_override_virtual_event(void* self, intptr_t slot);
bool QWebView_virtualbase_event(void* self, QEvent* param1);
bool QWebView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QWebView_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QWebView_override_virtual_paintEvent(void* self, intptr_t slot);
void QWebView_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QWebView_override_virtual_createWindow(void* self, intptr_t slot);
QWebView* QWebView_virtualbase_createWindow(void* self, int type);
bool QWebView_override_virtual_changeEvent(void* self, intptr_t slot);
void QWebView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QWebView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QWebView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QWebView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QWebView_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QWebView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QWebView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* param1);
bool QWebView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QWebView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QWebView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QWebView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QWebView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QWebView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QWebView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QWebView_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QWebView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QWebView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* param1);
bool QWebView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QWebView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* param1);
bool QWebView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QWebView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* param1);
bool QWebView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QWebView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* param1);
bool QWebView_override_virtual_dropEvent(void* self, intptr_t slot);
void QWebView_virtualbase_dropEvent(void* self, QDropEvent* param1);
void QWebView_virtualbase_focusInEvent(void* self, QFocusEvent* param1);