seaqt/QtWebKitWidgets/gen_qwebview.nim


proc fcQWebView_new(parent: pointer): ptr cQWebView {.importc: "QWebView_new".}
proc fcQWebView_new2(): ptr cQWebView {.importc: "QWebView_new2".}
proc fcQWebView_metaObject(self: pointer, ): pointer {.importc: "QWebView_metaObject".}
proc fcQWebView_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebView_metacast".}
proc fcQWebView_tr(s: cstring): struct_miqt_string {.importc: "QWebView_tr".}
proc fcQWebView_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebView_trUtf8".}
proc fcQWebView_page(self: pointer, ): pointer {.importc: "QWebView_page".}
proc fcQWebView_setPage(self: pointer, page: pointer): void {.importc: "QWebView_setPage".}
proc fcQWebView_load(self: pointer, url: pointer): void {.importc: "QWebView_load".}
proc fcQWebView_loadWithRequest(self: pointer, request: pointer): void {.importc: "QWebView_loadWithRequest".}
proc fcQWebView_setHtml(self: pointer, html: struct_miqt_string): void {.importc: "QWebView_setHtml".}
proc fcQWebView_setContent(self: pointer, data: struct_miqt_string): void {.importc: "QWebView_setContent".}
proc fcQWebView_history(self: pointer, ): pointer {.importc: "QWebView_history".}
proc fcQWebView_settings(self: pointer, ): pointer {.importc: "QWebView_settings".}
proc fcQWebView_title(self: pointer, ): struct_miqt_string {.importc: "QWebView_title".}
proc fcQWebView_setUrl(self: pointer, url: pointer): void {.importc: "QWebView_setUrl".}
proc fcQWebView_url(self: pointer, ): pointer {.importc: "QWebView_url".}
proc fcQWebView_icon(self: pointer, ): pointer {.importc: "QWebView_icon".}
proc fcQWebView_hasSelection(self: pointer, ): bool {.importc: "QWebView_hasSelection".}
proc fcQWebView_selectedText(self: pointer, ): struct_miqt_string {.importc: "QWebView_selectedText".}
proc fcQWebView_selectedHtml(self: pointer, ): struct_miqt_string {.importc: "QWebView_selectedHtml".}
proc fcQWebView_pageAction(self: pointer, action: cint): pointer {.importc: "QWebView_pageAction".}
proc fcQWebView_triggerPageAction(self: pointer, action: cint): void {.importc: "QWebView_triggerPageAction".}
proc fcQWebView_isModified(self: pointer, ): bool {.importc: "QWebView_isModified".}
proc fcQWebView_inputMethodQuery(self: pointer, property: cint): pointer {.importc: "QWebView_inputMethodQuery".}
proc fcQWebView_sizeHint(self: pointer, ): pointer {.importc: "QWebView_sizeHint".}
proc fcQWebView_zoomFactor(self: pointer, ): float64 {.importc: "QWebView_zoomFactor".}
proc fcQWebView_setZoomFactor(self: pointer, factor: float64): void {.importc: "QWebView_setZoomFactor".}
proc fcQWebView_setTextSizeMultiplier(self: pointer, factor: float64): void {.importc: "QWebView_setTextSizeMultiplier".}
proc fcQWebView_textSizeMultiplier(self: pointer, ): float64 {.importc: "QWebView_textSizeMultiplier".}
proc fcQWebView_renderHints(self: pointer, ): cint {.importc: "QWebView_renderHints".}
proc fcQWebView_setRenderHints(self: pointer, hints: cint): void {.importc: "QWebView_setRenderHints".}
proc fcQWebView_setRenderHint(self: pointer, hint: cint): void {.importc: "QWebView_setRenderHint".}
proc fcQWebView_findText(self: pointer, subString: struct_miqt_string): bool {.importc: "QWebView_findText".}
proc fcQWebView_event(self: pointer, param1: pointer): bool {.importc: "QWebView_event".}
proc fcQWebView_stop(self: pointer, ): void {.importc: "QWebView_stop".}
proc fcQWebView_back(self: pointer, ): void {.importc: "QWebView_back".}
proc fcQWebView_forward(self: pointer, ): void {.importc: "QWebView_forward".}
proc fcQWebView_reload(self: pointer, ): void {.importc: "QWebView_reload".}
proc fcQWebView_print(self: pointer, param1: pointer): void {.importc: "QWebView_print".}
proc fcQWebView_loadStarted(self: pointer, ): void {.importc: "QWebView_loadStarted".}
proc fcQWebView_connect_loadStarted(self: pointer, slot: int) {.importc: "QWebView_connect_loadStarted".}
proc fcQWebView_loadProgress(self: pointer, progress: cint): void {.importc: "QWebView_loadProgress".}
proc fcQWebView_connect_loadProgress(self: pointer, slot: int) {.importc: "QWebView_connect_loadProgress".}
proc fcQWebView_loadFinished(self: pointer, param1: bool): void {.importc: "QWebView_loadFinished".}
proc fcQWebView_connect_loadFinished(self: pointer, slot: int) {.importc: "QWebView_connect_loadFinished".}
proc fcQWebView_titleChanged(self: pointer, title: struct_miqt_string): void {.importc: "QWebView_titleChanged".}
proc fcQWebView_connect_titleChanged(self: pointer, slot: int) {.importc: "QWebView_connect_titleChanged".}
proc fcQWebView_statusBarMessage(self: pointer, text: struct_miqt_string): void {.importc: "QWebView_statusBarMessage".}
proc fcQWebView_connect_statusBarMessage(self: pointer, slot: int) {.importc: "QWebView_connect_statusBarMessage".}
proc fcQWebView_linkClicked(self: pointer, param1: pointer): void {.importc: "QWebView_linkClicked".}
proc fcQWebView_connect_linkClicked(self: pointer, slot: int) {.importc: "QWebView_connect_linkClicked".}
proc fcQWebView_selectionChanged(self: pointer, ): void {.importc: "QWebView_selectionChanged".}
proc fcQWebView_connect_selectionChanged(self: pointer, slot: int) {.importc: "QWebView_connect_selectionChanged".}
proc fcQWebView_iconChanged(self: pointer, ): void {.importc: "QWebView_iconChanged".}
proc fcQWebView_connect_iconChanged(self: pointer, slot: int) {.importc: "QWebView_connect_iconChanged".}
proc fcQWebView_urlChanged(self: pointer, param1: pointer): void {.importc: "QWebView_urlChanged".}
proc fcQWebView_connect_urlChanged(self: pointer, slot: int) {.importc: "QWebView_connect_urlChanged".}
proc fcQWebView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebView_tr2".}
proc fcQWebView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebView_tr3".}
proc fcQWebView_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebView_trUtf82".}
proc fcQWebView_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebView_trUtf83".}
proc fcQWebView_load2(self: pointer, request: pointer, operation: cint): void {.importc: "QWebView_load2".}
proc fcQWebView_load3(self: pointer, request: pointer, operation: cint, body: struct_miqt_string): void {.importc: "QWebView_load3".}
proc fcQWebView_setHtml2(self: pointer, html: struct_miqt_string, baseUrl: pointer): void {.importc: "QWebView_setHtml2".}
proc fcQWebView_setContent2(self: pointer, data: struct_miqt_string, mimeType: struct_miqt_string): void {.importc: "QWebView_setContent2".}
proc fcQWebView_setContent3(self: pointer, data: struct_miqt_string, mimeType: struct_miqt_string, baseUrl: pointer): void {.importc: "QWebView_setContent3".}
proc fcQWebView_triggerPageAction2(self: pointer, action: cint, checked: bool): void {.importc: "QWebView_triggerPageAction2".}
proc fcQWebView_setRenderHint2(self: pointer, hint: cint, enabled: bool): void {.importc: "QWebView_setRenderHint2".}
proc fcQWebView_findText2(self: pointer, subString: struct_miqt_string, options: cint): bool {.importc: "QWebView_findText2".}
proc fQWebView_virtualbase_inputMethodQuery(self: pointer, property: cint): pointer{.importc: "QWebView_virtualbase_inputMethodQuery".}
proc fcQWebView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QWebView_override_virtual_inputMethodQuery".}
proc fQWebView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QWebView_virtualbase_sizeHint".}
proc fcQWebView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QWebView_override_virtual_sizeHint".}
proc fQWebView_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QWebView_virtualbase_event".}
proc fcQWebView_override_virtual_event(self: pointer, slot: int) {.importc: "QWebView_override_virtual_event".}
proc fQWebView_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_resizeEvent".}
proc fcQWebView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_resizeEvent".}
proc fQWebView_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_paintEvent".}
proc fcQWebView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_paintEvent".}
proc fQWebView_virtualbase_createWindow(self: pointer, typeVal: cint): pointer{.importc: "QWebView_virtualbase_createWindow".}
proc fcQWebView_override_virtual_createWindow(self: pointer, slot: int) {.importc: "QWebView_override_virtual_createWindow".}
proc fQWebView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_changeEvent".}
proc fcQWebView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_changeEvent".}
proc fQWebView_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_mouseMoveEvent".}
proc fcQWebView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_mouseMoveEvent".}
proc fQWebView_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_mousePressEvent".}
proc fcQWebView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_mousePressEvent".}
proc fQWebView_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_mouseDoubleClickEvent".}
proc fcQWebView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_mouseDoubleClickEvent".}
proc fQWebView_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_mouseReleaseEvent".}
proc fcQWebView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_mouseReleaseEvent".}
proc fQWebView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_contextMenuEvent".}
proc fcQWebView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_contextMenuEvent".}
proc fQWebView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_wheelEvent".}
proc fcQWebView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_wheelEvent".}
proc fQWebView_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_keyPressEvent".}
proc fcQWebView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_keyPressEvent".}
proc fQWebView_virtualbase_keyReleaseEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_keyReleaseEvent".}
proc fcQWebView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_keyReleaseEvent".}
proc fQWebView_virtualbase_dragEnterEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_dragEnterEvent".}
proc fcQWebView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_dragEnterEvent".}
proc fQWebView_virtualbase_dragLeaveEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_dragLeaveEvent".}
proc fcQWebView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_dragLeaveEvent".}
proc fQWebView_virtualbase_dragMoveEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_dragMoveEvent".}
proc fcQWebView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_dragMoveEvent".}
proc fQWebView_virtualbase_dropEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_dropEvent".}
proc fcQWebView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QWebView_override_virtual_dropEvent".}
proc fQWebView_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QWebView_virtualbase_focusInEvent".}
